// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<input
  className="test search"
  disabled={false}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyDown={[MockFunction]}
  placeholder="Placeholder"
  type="text"
/>
`;

exports[`renders disabled 1`] = `
<input
  className="test search"
  disabled={true}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyDown={[MockFunction]}
  placeholder="Placeholder"
  type="text"
/>
`;

exports[`renders hidden 1`] = `
<input
  className="test search"
  disabled={false}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyDown={[MockFunction]}
  placeholder="Placeholder"
  type="text"
/>
`;

exports[`renders searchText 1`] = `
<input
  className="test search"
  disabled={false}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyDown={[MockFunction]}
  placeholder="Placeholder"
  type="text"
  value="search text"
/>
`;
